--- a/app/components/basemap/ToolBox.scss
+++ b/app/components/basemap/ToolBox.scss
@@ -3,13 +3,28 @@
 $nansi-light: #c4c4c4;
 $nansi-dark: #2d2d2d;
 
-#GraphControls {
-  position: absolute;
-  right: 15px;
+#ToolBox {
+  background-color: $nansi-light;
   top: 15px;
+  left: 15px;
+  position: absolute;
+  width: 300px;
+  height: calc(100vh - 30px);
   z-index: 10;
+  padding: 15px;
+  border: 1px solid $nansi-dark;
+
+  transition-property: left;
+  transition-duration: 0.6s;
+
+  &:not(.expanded) {
+    left: -300px;
+  }
 
   .control-button {
+    position: absolute;
+    left: 310px;
+    top: 0px;
     border: 1px solid $nansi-dark;
     width: 42px;
     height: 42px;
