--- a/app/components/basemap/GraphInformation.scss
+++ b/app/components/basemap/GraphInformation.scss
@@ -1,7 +1,4 @@
-// Variables
-// TODO: ask rob
-$nansi-light: #c4c4c4;
-$nansi-dark: #2d2d2d;
+@import '../../variables.scss';
 
 #GraphInformation {
   position: absolute;
