--- a/app/components/import/FileDrop.scss
+++ b/app/components/import/FileDrop.scss
@@ -5,7 +5,7 @@
   margin-top: 20px;
   border: 1px solid $nansi-dark;
   background-color: $nansi-light;
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 100%;
   padding: 15px;
 }
