--- a/app/components/basemap/ToolBox/ToolBox.scss
+++ b/app/components/basemap/ToolBox/ToolBox.scss
@@ -1,11 +1,13 @@
-@import '../../variables.scss';
+@import '../../../variables.scss';
+
+$nansi-toolbox-width: 350px;
 
 #ToolBox {
   background-color: $nansi-light;
   top: 15px;
   left: 15px;
   position: absolute;
-  width: 300px;
+  width: $nansi-toolbox-width;
   height: calc(100vh - 30px);
   z-index: 10;
   border: 1px solid $nansi-dark;
@@ -14,12 +16,12 @@
   transition-duration: 0.6s;
 
   &:not(.expanded) {
-    left: -300px;
+    left: -$nansi-toolbox-width;
   }
 
   .control-button {
     position: absolute;
-    left: 310px;
+    left: $nansi-toolbox-width + 10px;
     top: 0px;
     border: 1px solid $nansi-dark;
     width: 42px;
@@ -55,5 +57,16 @@
     border-top: 1px solid $nansi-dark;
     border-bottom: 1px solid $nansi-dark;
     height: calc(100vh - 30px - 80px - 64px);
+    padding: 5px;
+
+    .variables-block {
+      padding: 5px;
+      background-color: $nansi-light;
+      border: 1px solid $nansi-dark;
+
+      h2 {
+        font-weight: bold;
+      }
+    }
   }
 }
