Worker for import

--- a/app/style.scss
+++ b/app/style.scss
@@ -3,6 +3,8 @@ $radius-small: 0px;
 $radius: 0px;
 $radius-large: 0px;
 
+$progress-border-radius: 0px;
+
 $modal-background-background-color: rgba(0, 0, 0, 0.5);
 
 // Importing bulma
