Reworking export layout

--- a/app/components/export/ExportModal.scss
+++ b/app/components/export/ExportModal.scss
@@ -12,5 +12,10 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+
+    .box {
+      text-align: center;
+      cursor: pointer;
+    }
   }
 }
