Canvas rendering prototype

--- a/app/components/export/ExportModal.scss
+++ b/app/components/export/ExportModal.scss
@@ -13,9 +13,8 @@
       margin-bottom: 20px;
     }
 
-    .box {
-      text-align: center;
-      cursor: pointer;
-    }
+    // canvas {
+    //   border: 1px solid $nansi-light;
+    // }
   }
 }
