Better raster scaling

--- a/app/components/export/ExportModal.scss
+++ b/app/components/export/ExportModal.scss
@@ -13,8 +13,8 @@
       margin-bottom: 20px;
     }
 
-    // canvas {
-    //   border: 1px solid $nansi-light;
-    // }
+    canvas {
+      border: 1px solid $nansi-light;
+    }
   }
 }
