--- a/app/style.scss
+++ b/app/style.scss
@@ -1,22 +1,10 @@
-// Overriding bulma variables
-$radius-small: 0px;
-$radius: 0px;
-$radius-large: 0px;
-
-$progress-border-radius: 0px;
-
-$modal-background-background-color: rgba(0, 0, 0, 0.5);
-$box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-  0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-
-// Importing bulma
-@import '~bulma';
+@import './theme.scss';
 
 // Importing other third-party stylesheets
 @import '~hint.css/hint.css';
 @import '~rc-slider/assets/index.css';
 
-// Global rules
+// Custom variables
 @import './variables.scss';
 
 html,
