--- a/app/components/basemap/GraphLegend.scss
+++ b/app/components/basemap/GraphLegend.scss
@@ -2,27 +2,31 @@
 
 #GraphLegend {
   position: absolute;
-  right: 15px;
-  bottom: 15px + 104px + 5px;
+  right: $gutter;
+  bottom: $gutter * 15;
+  // bottom: $gutter * 10;
   z-index: 10;
   background-color: white;
   color: $nansi-dark;
-  padding: 5px;
-  width: 150px;
-  border: 1px solid $nansi-dark;
-  font-size: 0.8em;
+  padding: $gutter 0 0 $gutter;
+  width: $gutter * 25;
+  border: 1px solid $nansi-light;
 
   &.graph-has-title {
-    bottom: 15px + 128px + 5px;
+    bottom: 15px + 128px + 5px; // TODO change that but did not have the opportunity to test
   }
 
-  h2 {
-    border-bottom: 1px solid $nansi-dark;
-    margin-bottom: 5px;
+  .title {
+    &.is-6 {
+      margin-bottom: $gutter;
+    }
+    &.is-7 {
+      margin-bottom: $gutter;
+    }
   }
 
   ul {
-    max-height: 200px;
+    max-height: calc(100vh - #{$gutter} * 37);
     overflow-y: auto;
 
     li {
