--- a/app/components/basemap/GraphSearch.scss
+++ b/app/components/basemap/GraphSearch.scss
@@ -2,9 +2,9 @@
 
 #GraphSearch {
   position: absolute;
-  top: 15px;
+  top: $gutter;
   height: 42px;
-  width: 400px;
-  right: 15px + 42px + 5px;
+  width: $gutter * 20;
+  right: $gutter * 6; // 15px + 42px + 5px;
   z-index: 10;
 }
