--- a/app/components/import/ImportModal.scss
+++ b/app/components/import/ImportModal.scss
@@ -33,6 +33,7 @@
       }
     }
     .card-header-title {
+      padding-top: $gutter * 3;
       margin-bottom: 0;
       margin-left: $gutter/2;
     }
@@ -41,7 +42,9 @@
     }
     .card-image {
       figure {
-        margin: $gutter;
+        margin: $gutter * 2;
+        margin-left: 0;
+        margin-right: 0;
         img {
           background: $nansi-medium;
           width: 8rem;
