add little improvements to gutters

--- a/app/components/basemap/GraphLegend.scss
+++ b/app/components/basemap/GraphLegend.scss
@@ -8,7 +8,7 @@
   z-index: 10;
   background-color: white;
   color: $nansi-dark;
-  padding: $gutter 0 0 $gutter;
+  padding: $gutter 0 $gutter $gutter;
   width: $gutter * 25;
   border: 1px solid $nansi-light;
 
