--- a/app/components/intro/Intro.scss
+++ b/app/components/intro/Intro.scss
@@ -59,7 +59,7 @@
     position: absolute;
     left: $gutter * 2;
     bottom: $gutter * 2;
-    max-width: 5vw;
+    max-width: 8vmax;
     z-index: 50;
   }
 }
