improve wdesign augment circulating hites around ui borders

--- a/app/components/basemap/GraphControls.scss
+++ b/app/components/basemap/GraphControls.scss
@@ -2,8 +2,8 @@
 
 #GraphControls {
   position: absolute;
-  right: $gutter;
-  top: $gutter;
+  right: $gutter * 2;
+  top: $gutter * 2;
   z-index: 10;
 
   .control-button {
