--- a/app/components/basemap/GraphLegend.scss
+++ b/app/components/basemap/GraphLegend.scss
@@ -2,8 +2,8 @@
 
 #GraphLegend {
   position: absolute;
-  right: $gutter;
-  bottom: $gutter * 15;
+  right: $gutter * 2;
+  bottom: $gutter * 16;
   // bottom: $gutter * 10;
   z-index: 10;
   background-color: white;
@@ -26,7 +26,7 @@
   }
 
   ul {
-    max-height: calc(100vh - #{$gutter} * 37);
+    max-height: calc(100vh - #{$gutter} * 36);
     overflow-y: auto;
 
     li {
