--- a/app/components/basemap/GraphSearch.scss
+++ b/app/components/basemap/GraphSearch.scss
@@ -2,9 +2,9 @@
 
 #GraphSearch {
   position: absolute;
-  top: $gutter;
+  top: $gutter * 2;
   height: 42px;
   width: $gutter * 20;
-  right: $gutter * 6; // 15px + 42px + 5px;
+  right: $gutter * 7; // 15px + 42px + 5px;
   z-index: 10;
 }
