--- a/app/theme.scss
+++ b/app/theme.scss
@@ -19,3 +19,8 @@ $box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
   border-radius: 0;
   box-shadow: none;
 }
+
+.button,
+.input {
+  border-radius: 0;
+}
