--- a/app/components/intro/Intro.scss
+++ b/app/components/intro/Intro.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import '../../variables.scss';
 
 .Intro {
@@ -13,7 +14,7 @@
     z-index: 50;
     position: relative;
     &.is-title {
-      margin-bottom: $gutter / 2;
+      margin-bottom: math.div($gutter, 2);
     }
     &.is-subtitle {
       max-width: 20vw;
